Added new bio page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-Hellow World
+<!DOCTYPE html>
+<htmL lang="en-us">
+<head> 
+	<meta charset="utf-8">
+	<title>Basic HTML Bio</title>
+<link rel="stylesheet" type="text/css" href="reset.css">
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<header>
+	<h1>All About Me!</h1>
+	</header>
+	
+	<div class="container">
+		<section id="main-bio">
+			<h2>Yvanna Harris</h2>
+				<img id="bio-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/SMirC-thumbsup.svg/200px-SMirC-thumbsup.svg.png" alt="Thumbs Up">
+
+				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+		</section>
+
+		<section id="contact-info">
+
+			<h2>Contact Info</h2>
+				<ul>
+					<li>Email: <a href="#">yvannaharris@yahoo.com</a></li>
+					<li>Github: <a href="https://github.com/yvannaharris">yvannaharris</a></li>
+					<li>Portfolio: <a href="#">comming soon</a></li>
+				</ul>
+		</section>
+	</div>
+
+</body>
+</htmL>
